Adicionar subtitulo de como funciona

--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
 
       <article>
         <h3>Como funciona?</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor.
-          Proin sed molestie massa. Nullam condimentum mauris et rhoncus sagittis. Sed eu metus in diam tincidunt
-          egestas non at odio.</p>
+        <p>O projeto contribui para o gerenciamento de leituras.</p>
       </article>
     </div>
   </section>
