Adicionar integração com Api de listagem e cadastro de livros.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     <button style="display: none;" class="header__btnMenu"> <i class="fas fa-bars fa-2x"></i> <span
         class="sr-only">Menu</span></button>
+
     <nav class="header__nav">
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -49,7 +50,7 @@
 
       <article>
         <h3>Como funciona?</h3>
-        <p>O projeto contribui para o gerenciamento de leituras.</p>
+        <p>Aqui no "Meus Livros" não tem complicação. Tudo o que você precisa fazer é se cadastrar, efetuar o login e começar a adicionar os seus livros. Simples assim.</p>
       </article>
     </div>
   </section>
@@ -63,7 +64,7 @@
     </div>
 
     <div class="last-articles__thumbs">
-      <a href="#"><img src="img/articles/01.jpg" alt=""></a>
+      <a href=""><img src="img/articles/01.jpg" alt=""></a>
       <a href="#"><img src="img/articles/02.jpg" alt=""></a>
       <a href="#"><img src="img/articles/03.jpg" alt=""></a>
       <a href="#"><img src="img/articles/04.jpg" alt=""></a>
@@ -76,7 +77,6 @@
       <a href="#"><img src="img/articles/11.jpg" alt=""></a>
       <a href="#"><img src="img/articles/12.jpg" alt=""></a>
     </div>
-  </section>
 
   <div class="laptop-slider">
     <div class="slideshow">
